76: Restart individual components from the API
