# src/api/docs/swagger.json
@@ -40,6 +40,17 @@
                     "auth"
                 ],
                 "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "Login payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/middleware.login"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -67,17 +78,17 @@
                 "tags": [
                     "job"
                 ],
-                "summary": "Get all jobs",
+                "summary": "Get all projects",
                 "parameters": [
                     {
                         "type": "boolean",
-                        "description": "Get long job details",
+                        "description": "Get long project details",
                         "name": "long",
                         "in": "query"
                     },
                     {
                         "type": "boolean",
-                        "description": "Get running jobs",
+                        "description": "Get running projects",
                         "name": "running",
                         "in": "query"
                     }
@@ -100,7 +111,7 @@
                 "tags": [
                     "job"
                 ],
-                "summary": "Create a job in nomad",
+                "summary": "Create a project",
                 "parameters": [
                     {
                         "description": "Job",
@@ -139,11 +150,11 @@
                 "tags": [
                     "job"
                 ],
-                "summary": "Get a job",
+                "summary": "Get a project",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Job ID",
+                        "description": "Project ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -167,11 +178,11 @@
                 "tags": [
                     "job"
                 ],
-                "summary": "Delete a job",
+                "summary": "Delete a project",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Job ID",
+                        "description": "Project ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -181,6 +192,50 @@
                         "description": "Purge job",
                         "name": "purge",
                         "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/jobs/{id}/component/{component}/restart": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Restart a component in a project",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "job"
+                ],
+                "summary": "Restart a component",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Project ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Component name",
+                        "name": "component",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -210,11 +265,11 @@
                 "tags": [
                     "job"
                 ],
-                "summary": "Restart a job",
+                "summary": "Restart a project",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Job ID",
+                        "description": "Project ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -232,6 +287,11 @@
         },
         "/v1/refresh": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Refresh token",
                 "consumes": [
                     "application/json"
@@ -389,6 +449,21 @@
                     "type": "string"
                 },
                 "user": {
+                    "type": "string"
+                }
+            }
+        },
+        "middleware.login": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
